--- a/packages/nestjs-nats-jetstream-transport/package.json
+++ b/packages/nestjs-nats-jetstream-transport/package.json
@@ -11,6 +11,9 @@
     "type": "git",
     "url": "https://github.com/Redningsselskapet/nestjs-plugins"
   },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "keywords": [
     "nestjs",
     "transport",
