--- a/packages/nats-publisher/package.json
+++ b/packages/nats-publisher/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nats-publisher",
-  "version": "0.2.11",
+  "version": "0.3.0-pre.0",
   "description": "",
   "author": "",
   "private": true,
