--- a/packages/nats-listener/package.json
+++ b/packages/nats-listener/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nats-listener",
-  "version": "0.1.13-pre.0",
+  "version": "0.1.13",
   "description": "",
   "author": "",
   "private": true,
