--- a/packages/nestjs-nats-jetstream-transport/package.json
+++ b/packages/nestjs-nats-jetstream-transport/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@arinanto/nestjs-nats-jetstream-transport",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "description": "Nats JetStream Transport for NestJS",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -9,7 +9,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/arinanto/nestjs-plugins.git"
+    "url": "git+https://github.com/arinanto/nestjs-plugins.git"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
